test/statements/elliot/loops/modifyIndicesLeaderFollower.good
modifyIndicesLeaderFollower.chpl:5: error: cannot assign to const variable
modifyIndicesLeaderFollower.chpl:6: error: cannot assign to const variable
